--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0"
   },
   "devDependencies": {
