sistema de logout, sistema de verificação de email, sistema de refresh token e ajustes em trechos do código

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ USER_EMAIL=exempleEmail@gmail.com
 PASS_EMAIL=myPassword
 SMTP_EMAIL=mySmtp
 PORT_EMAIL=mySmtpPort
+BASE_URL=localhost:3000/verifyEmail/
+
+# Environment
+NODE_ENV=development
