--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/CaioVinicius7/api-concessionaria#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -27,10 +26,11 @@
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
-    "jest": "^27.0.6",
+    "jest": "^27.2.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.6"
   }
