--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CaioVinicius7/api-concessionaria.git"
@@ -17,6 +20,7 @@
   },
   "homepage": "https://github.com/CaioVinicius7/api-concessionaria#readme",
   "dependencies": {
+    "@prisma/client": "^3.1.1",
     "bcryptjs": "^2.4.3",
     "consign": "^0.1.6",
     "dotenv": "^10.0.0",
@@ -25,13 +29,13 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
-    "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
     "redis": "^3.1.2"
   },
   "devDependencies": {
     "jest": "^27.2.0",
     "nodemon": "^2.0.12",
+    "prisma": "^3.1.1",
     "supertest": "^6.1.6"
   }
 }
