--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "redis": "^3.1.2"
   },
   "devDependencies": {
-    "jest": "^27.2.0",
+    "eslint": "^8.1.0",
     "nodemon": "^2.0.13",
-    "prisma": "^3.1.1",
-    "supertest": "^6.1.6"
+    "prisma": "^3.1.1"
   }
 }
