Adição do eslint, correção de bugs

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ BASE_URL=localhost:3000/verifyEmail/
 
 # Environment
 NODE_ENV=development
+
+# Conexão com o banco de dados
+DATABASE_URL="mysql://root:mysqllocal@localhost:3307/prisma?schema=public"
