--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/CaioVinicius7/api-concessionaria#readme",
   "dependencies": {
-    "@prisma/client": "^3.1.1",
+    "@prisma/client": "^3.4.2",
     "bcryptjs": "^2.4.3",
     "consign": "^0.1.6",
     "dotenv": "^10.0.0",
@@ -33,9 +33,8 @@
     "redis": "^3.1.2"
   },
   "devDependencies": {
-    "jest": "^27.2.0",
+    "eslint": "^8.1.0",
     "nodemon": "^2.0.13",
-    "prisma": "^3.1.1",
-    "supertest": "^6.1.6"
+    "prisma": "^3.4.2"
   }
 }
